cif/org.eclipse.escet.cif.tests/tests/checks/ExprNoSpecificUnaryExprsCheckLevel2.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:
 - Unary operator "+" is used on a ranged integer typed operand:
   - In group "PLUS_INTS_RANGED":
     - invariant 1 = +1;
                     ^
 - Unary operator "+" is used on a rangeless integer typed operand:
   - In automaton "PLUS_INTS_RANGELESS":
     - invariant v = +v;
                     ^
 - Unary operator "-" is used on a ranged integer typed operand:
   - In group "NEGATE_INTS_RANGED":
     - invariant 1 = -1;
                     ^
 - Unary operator "-" is used on a rangeless integer typed operand:
   - In automaton "NEGATE_INTS_RANGELESS":
     - invariant v = -v;
                     ^
